# ConvertAgent

./: .gitignore  DEVNOTES.md  README.md  TEMPLATE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
python-backend/: .env.example  agent.py  app.py  code_executor.py  requirements.txt  tools.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ChatBox.vue  ContentEditor.vue  FilePreview.vue  FileUpload.vue  FileUploadSimple.vue  ProgressPanel.vue  TemplateMode.vue
